Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.23
-
Component/s: Backup, Galera SST
-
Labels:
Description
If datadir is not specified in the [mysqld] section of the MariaDB configuration file, then mariabackup SST attempts will fail on the joiner with errors in innobackup.move.log similar to this:
170530 12:06:47 innobackupex: Starting the move-back operation
|
|
IMPORTANT: Please check that the move-back run completes successfully.
|
At the end of a successful move-back run innobackupex
|
prints "completed OK!".
|
|
innobackupex based on MariaDB server 10.1.23-MariaDB Linux (x86_64)
|
Error: datadir must be specified.
|
I believe that this behavior was inherited from the xtrabackup-v2 SST method, but it seems a bit unnecessary and it might be fixable. The server obviously knows its own datadir, so can't it specify the value on the command-line or something like that?
Attachments
Issue Links
- is duplicated by
-
MDEV-14966 Fail to restore data with mariabackup without specified data dir
-
- Closed
-
-
MDEV-15836 MariaDB galera SST broken using mariabackup
-
- Closed
-
- relates to
-
MDEV-18863 Galera SST scripts can't read mysqld_multi's [mysqldN] option groups
-
- Closed
-