MDEV-12956 provide default datadir for mariabackup --copy-back

On Unix, it is compiled-in datadir value.
On Windows, the directory is ..\data, relative to directory
mariabackup.exe

server uses the same logic to determine datadir.